bynkc/tests/fixtures/positive/170_cross_ctx_capability_workers/src/ops/jobs.karn
context ops.jobs

consumes platform.time

service tick {
  on call() -> Effect[Int] given platform.time.Clock {
    let t <- platform.time.Clock.now()
    t
  }
}
