bynkc/tests/fixtures/negative/131_given_cross_ctx_unknown/src/app/svc.karn
context app.svc

consumes platform.clk

service tick {
  on call() -> Effect[Int] given platform.clk.Clock {
    let t <- platform.clk.Clock.now()
    t
  }
}
